[gd_scene load_steps=31 format=3 uid="uid://j5tywsgqysmg"]

[ext_resource type="Script" path="res://Scene/Mob/mob.gd" id="1_mdu5j"]
[ext_resource type="Texture2D" uid="uid://ckbkesmdlyvat" path="res://Assets/Mob/sprites/characters/slime.png" id="1_s1ml2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xmjsl"]
radius = 6.99

[sub_resource type="AtlasTexture" id="AtlasTexture_iufjc"]
atlas = ExtResource("1_s1ml2")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nw8h"]
atlas = ExtResource("1_s1ml2")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w7x0"]
atlas = ExtResource("1_s1ml2")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhs51"]
atlas = ExtResource("1_s1ml2")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_viuag"]
atlas = ExtResource("1_s1ml2")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikosa"]
atlas = ExtResource("1_s1ml2")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n1sk"]
atlas = ExtResource("1_s1ml2")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oih65"]
atlas = ExtResource("1_s1ml2")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkllf"]
atlas = ExtResource("1_s1ml2")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfptc"]
atlas = ExtResource("1_s1ml2")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7247"]
atlas = ExtResource("1_s1ml2")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2kuy"]
atlas = ExtResource("1_s1ml2")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2omq"]
atlas = ExtResource("1_s1ml2")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_st1wu"]
atlas = ExtResource("1_s1ml2")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lncm1"]
atlas = ExtResource("1_s1ml2")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ohhl"]
atlas = ExtResource("1_s1ml2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_48v5a"]
atlas = ExtResource("1_s1ml2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4oaq"]
atlas = ExtResource("1_s1ml2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26l8y"]
atlas = ExtResource("1_s1ml2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujky4"]
atlas = ExtResource("1_s1ml2")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ehn6"]
atlas = ExtResource("1_s1ml2")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_du5ip"]
atlas = ExtResource("1_s1ml2")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h34a8"]
atlas = ExtResource("1_s1ml2")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwtlh"]
atlas = ExtResource("1_s1ml2")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2bdy"]
atlas = ExtResource("1_s1ml2")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pavlb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iufjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nw8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w7x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhs51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_viuag")
}],
"loop": false,
"name": &"Die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikosa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n1sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oih65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkllf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfptc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7247")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2kuy")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2omq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st1wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lncm1")
}],
"loop": true,
"name": &"Peur",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ohhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48v5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4oaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26l8y")
}],
"loop": true,
"name": &"Slime",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujky4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ehn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_du5ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h34a8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwtlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2bdy")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nhx3t"]
radius = 54.8

[node name="Mob" type="Node2D" groups=["MobsNode"]]
z_as_relative = false
script = ExtResource("1_mdu5j")

[node name="Body" type="Area2D" parent="." groups=["Mobs"]]
position = Vector2(0, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource("CircleShape2D_xmjsl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_pavlb")
animation = &"Die"

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Vision"]
polygon = PackedVector2Array(0, 0, 300, -50, 300, 50)
one_way_collision_margin = 0.0

[node name="Polygon2D" type="Polygon2D" parent="Vision"]
color = Color(1, 1, 1, 0.172549)
polygon = PackedVector2Array(0, 0, 300, -50, 300, 50)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CircleShape2D_nhx3t")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AttackMode" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="IsHeStillThere" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_vision_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackMode" to="." method="_on_attack_mode_timeout"]
[connection signal="timeout" from="IsHeStillThere" to="." method="_on_is_he_still_there_timeout"]
